Changes
-------

0.2.0 (2017-**-**)
^^^^^^^^^^^^^^^^^^

**NEW**:

* Add more docstrings to the code;
* Add tests for all rpc methods;
* Add admin and debug;


**FIX**:

* Errors in eth module call;
* Unixsocket invalid loop for Python 3.4;



0.1.1 (2017-10-01)
^^^^^^^^^^^^^^^^^^

**NEW**:

* Add sphinx docs;


0.1.0 (2017-09-30)
^^^^^^^^^^^^^^^^^^

**NEW**:

* Add HTTP(s) and IPC clients for ethereum nodes;

* Implement RPC apis - db, eth, miner, net, personal, shh, txpool, web3;

* Add ujson encoder/decoder;