@@ -6,7 +6,7 @@ source = aioethereum,tests
 show_missing = true
 
 [tool:pytest]
-addopts = --cov --no-cov-on-fail --cov-fail-under=1 --cov-report=term --verbose --cache-clear
+addopts = --cov --no-cov-on-fail --cov-fail-under=75 --cov-report=term --verbose --cache-clear
 testpaths = tests
 
 [metadata]
